Add alerting with kube-state-metrics and event exporter

--- a/apps/monitoring/prometheus-configmap.yaml
+++ b/apps/monitoring/prometheus-configmap.yaml
@@ -7,10 +7,22 @@ data:
   prometheus.yml: |
     global:
       scrape_interval: 30s
+    alerting:
+      alertmanagers:
+        - static_configs:
+            - targets: ['alertmanager.monitoring.svc.cluster.local:9093']
+    rule_files:
+      - /etc/prometheus/alert_rules.yml
     scrape_configs:
       - job_name: prometheus
         static_configs:
           - targets: ['localhost:9090']
+      - job_name: kube-state-metrics
+        static_configs:
+          - targets: ['kube-state-metrics.monitoring.svc.cluster.local:8080']
+      - job_name: kube-event-exporter
+        static_configs:
+          - targets: ['kube-event-exporter.monitoring.svc.cluster.local:2112']
       - job_name: tautulli
         metrics_path: /metrics
         static_configs:
@@ -19,3 +31,75 @@ data:
         metrics_path: /metrics
         static_configs:
           - targets: ['tautulli-library-exporter.monitoring.svc.cluster.local:9101']
+  alert_rules.yml: |
+    groups:
+      - name: kubernetes-pods
+        rules:
+          - alert: PodCrashLooping
+            expr: max_over_time(kube_pod_container_status_waiting_reason{reason="CrashLoopBackOff"}[5m]) >= 1
+            for: 5m
+            labels:
+              severity: warning
+            annotations:
+              summary: Pod is crash looping
+              description: Pod {{ $labels.namespace }}/{{ $labels.pod }} is in CrashLoopBackOff.
+          - alert: PodImagePullBackOff
+            expr: max_over_time(kube_pod_container_status_waiting_reason{reason=~"ErrImagePull|ImagePullBackOff"}[5m]) >= 1
+            for: 5m
+            labels:
+              severity: warning
+            annotations:
+              summary: Pod image pull failed
+              description: Pod {{ $labels.namespace }}/{{ $labels.pod }} has ImagePullBackOff.
+          - alert: PodOOMKilled
+            expr: max_over_time(kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}[5m]) >= 1
+            for: 0m
+            labels:
+              severity: warning
+            annotations:
+              summary: Pod OOMKilled
+              description: Pod {{ $labels.namespace }}/{{ $labels.pod }} was OOMKilled.
+          - alert: PodRestarting
+            expr: increase(kube_pod_container_status_restarts_total[10m]) > 0
+            for: 10m
+            labels:
+              severity: warning
+            annotations:
+              summary: Pod restarting
+              description: Pod {{ $labels.namespace }}/{{ $labels.pod }} restarted in the last 10 minutes.
+          - alert: PodNotReady
+            expr: kube_pod_status_ready{condition="true"} == 0
+            for: 10m
+            labels:
+              severity: warning
+            annotations:
+              summary: Pod not ready
+              description: Pod {{ $labels.namespace }}/{{ $labels.pod }} has been not ready for over 10 minutes.
+      - name: kubernetes-workloads
+        rules:
+          - alert: DeploymentReplicasMismatch
+            expr: kube_deployment_status_replicas_available < kube_deployment_spec_replicas
+            for: 10m
+            labels:
+              severity: warning
+            annotations:
+              summary: Deployment replicas mismatch
+              description: Deployment {{ $labels.namespace }}/{{ $labels.deployment }} has less available replicas than desired.
+          - alert: StatefulSetReplicasMismatch
+            expr: kube_statefulset_status_replicas_ready < kube_statefulset_replicas
+            for: 10m
+            labels:
+              severity: warning
+            annotations:
+              summary: StatefulSet replicas mismatch
+              description: StatefulSet {{ $labels.namespace }}/{{ $labels.statefulset }} has less ready replicas than desired.
+      - name: kubernetes-nodes
+        rules:
+          - alert: NodeNotReady
+            expr: kube_node_status_condition{condition="Ready",status="true"} == 0
+            for: 5m
+            labels:
+              severity: critical
+            annotations:
+              summary: Node not ready
+              description: Node {{ $labels.node }} has been not ready for over 5 minutes.
