--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -8,6 +8,11 @@ resources:
   - prometheus-deployment.yaml
   - prometheus-service.yaml
   - prometheus-ingress.yaml
+  - alertmanager.sops.yaml
+  - alertmanager-deployment.yaml
+  - alertmanager-service.yaml
+  - kube-state-metrics.yaml
+  - kube-event-exporter.yaml
   - tautulli-exporter.sops.yaml
   - tautulli-exporter-deployment.yaml
   - tautulli-exporter-service.yaml
