Fix kube-event-exporter config flag

--- a/apps/monitoring/kube-event-exporter.yaml
+++ b/apps/monitoring/kube-event-exporter.yaml
@@ -38,7 +38,7 @@ spec:
           image: ghcr.io/opsgenie/kubernetes-event-exporter:v0.11
           imagePullPolicy: IfNotPresent
           args:
-            - --config=/config/config.yaml
+            - --conf=/config/config.yaml
           ports:
             - name: http
               containerPort: 2112
