--- a/apps/infrastructure/garage-service.yaml
+++ b/apps/infrastructure/garage-service.yaml
@@ -13,6 +13,9 @@ spec:
     - name: s3
       port: 3900
       targetPort: s3
+    - name: web
+      port: 3902
+      targetPort: web
     - name: rpc
       port: 3901
       targetPort: rpc
