Move Garage web root to romanpeters.nl

--- a/apps/infrastructure/garage-config.yaml
+++ b/apps/infrastructure/garage-config.yaml
@@ -21,7 +21,7 @@ data:
 
     [s3_web]
     bind_addr = "[::]:3902"
-    root_domain = ".cdn.romanpeters.nl"
+    root_domain = ".romanpeters.nl"
     index = "index.html"
 
     [admin]
