--- a/apps/infrastructure/garage-web-ingress.yaml
+++ b/apps/infrastructure/garage-web-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: cdn.romanpeters.nl
+    - host: romanpeters.nl
       http:
         paths:
           - path: /
@@ -18,7 +18,7 @@ spec:
                 name: garage
                 port:
                   name: web
-    - host: "*.cdn.romanpeters.nl"
+    - host: "*.romanpeters.nl"
       http:
         paths:
           - path: /
