--- a/apps/infrastructure/homepage-tv-config.yaml
+++ b/apps/infrastructure/homepage-tv-config.yaml
@@ -8,7 +8,7 @@ data:
     title: RomanTV
     theme: light
     color: slate
-    background: https://raw.githubusercontent.com/romanpeters/romanpeters.github.io/refs/heads/main/assets/rtvbg.jpeg
+    background: https://images.romanpeters.nl/rtvbg.jpeg
     headerStyle: boxed
     statusStyle: dot
     layout:
