Add code and memes hosts to Garage ingress

--- a/apps/infrastructure/garage-web-ingress.yaml
+++ b/apps/infrastructure/garage-web-ingress.yaml
@@ -98,6 +98,26 @@ spec:
                 name: garage
                 port:
                   name: web
+    - host: code.romanpeters.nl
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: garage
+                port:
+                  name: web
+    - host: memes.romanpeters.nl
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: garage
+                port:
+                  name: web
     - host: javascript.romanpeters.nl
       http:
         paths:
