--- a/apps/automation/awx.yaml
+++ b/apps/automation/awx.yaml
@@ -6,6 +6,6 @@ spec:
   service_type: ClusterIP
   ingress_type: ingress
   ingress_class_name: traefik
-  hostname: automation.romanpeters.nl
+  hostname: awx.romanpeters.nl
   ingress_annotations: |
     traefik.ingress.kubernetes.io/router.entrypoints: web
