Add MetalLB VIPs and internal Traefik entrypoint

--- a/apps/system/traefik-dashboard-ingressroute.yaml
+++ b/apps/system/traefik-dashboard-ingressroute.yaml
@@ -5,10 +5,12 @@ metadata:
   namespace: kube-system
 spec:
   entryPoints:
-    - web
+    - websecure-internal
   routes:
     - match: Host(`traefik.romanpeters.nl`)
       kind: Rule
       services:
         - name: api@internal
           kind: TraefikService
+  tls:
+    secretName: romanpeters-nl-tls
