--- a/apps/system/kustomization.yaml
+++ b/apps/system/kustomization.yaml
@@ -1,5 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - https://github.com/cert-manager/cert-manager/releases/download/v1.19.2/cert-manager.yaml
+  - cert-manager-cloudflare-secret.sops.yaml
+  - cert-manager-clusterissuer.yaml
+  - romanpeters-wildcard-cert.yaml
+  - https://raw.githubusercontent.com/metallb/metallb/v0.15.3/config/manifests/metallb-native.yaml
+  - metallb-config.yaml
   - traefik-helmchartconfig.yaml
   - traefik-dashboard-ingressroute.yaml
+  - traefik-internal-service.yaml
