Fix internal entrypoint name

--- a/apps/system/traefik-dashboard-ingressroute.yaml
+++ b/apps/system/traefik-dashboard-ingressroute.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
 spec:
   entryPoints:
-    - websecure-internal
+    - websecure-int
   routes:
     - match: Host(`traefik.romanpeters.nl`)
       kind: Rule
