--- a/apps/system/traefik-helmchartconfig.yaml
+++ b/apps/system/traefik-helmchartconfig.yaml
@@ -18,4 +18,5 @@ spec:
           tls:
             enabled: true
     service:
-      loadBalancerIP: 10.10.20.240
+      spec:
+        loadBalancerIP: 10.10.20.240
