--- a/apps/system/kustomization.yaml
+++ b/apps/system/kustomization.yaml
@@ -9,4 +9,5 @@ resources:
   - metallb-config.yaml
   - traefik-helmchartconfig.yaml
   - traefik-dashboard-ingressroute.yaml
+  - traefik-dashboard-external-ingressroute.yaml
   - traefik-internal-service.yaml
