Remove internal/external Traefik dashboard routes

--- a/apps/system/traefik-dashboard-ingressroute.yaml
+++ b/apps/system/traefik-dashboard-ingressroute.yaml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - websecure-int
   routes:
-    - match: Host(`traefik.romanpeters.nl`) || Host(`internal.romanpeters.nl`)
+    - match: Host(`traefik.romanpeters.nl`)
       kind: Rule
       services:
         - name: api@internal
