Add internal Traefik routes for external servers

--- a/apps/infrastructure/kustomization.yaml
+++ b/apps/infrastructure/kustomization.yaml
@@ -25,3 +25,7 @@ resources:
   - homepage-tv-service.yaml
   - homepage-tv-ingress.yaml
   - homepage-tv-redirects.yaml
+  - traefik-external-services.yaml
+  - traefik-external-ingressroutes.yaml
+  - traefik-proxmox-transport.yaml
+  - romanpeters-wildcard-cert.yaml
