Move legacy websecure entrypoint off 8443

--- a/apps/system/traefik-helmchartconfig.yaml
+++ b/apps/system/traefik-helmchartconfig.yaml
@@ -9,6 +9,7 @@ spec:
       - "--entrypoints.web.forwardedHeaders.insecure=true"
     ports:
       websecure:
+        port: 8444
         expose:
           default: false
       websecure-int:
