Expose TV ingress on internal/external and add homepage link

--- a/apps/infrastructure/homepage-config.yaml
+++ b/apps/infrastructure/homepage-config.yaml
@@ -145,6 +145,11 @@ data:
             icon: traefik
             siteMonitor: https://traefik.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - TV:
+            href: https://tv.romanpeters.nl
+            icon: mdi-television
+            siteMonitor: https://tv.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
         - Authentik:
             href: https://auth.romanpeters.nl
             icon: authentik
