--- a/apps/infrastructure/homepage-tv-ingress.yaml
+++ b/apps/infrastructure/homepage-tv-ingress.yaml
@@ -4,9 +4,13 @@ metadata:
   name: homepage-tv
   namespace: infrastructure
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
 spec:
   ingressClassName: traefik
+  tls:
+    - secretName: romanpeters-nl-tls
+      hosts:
+        - tv.romanpeters.nl
   rules:
     - host: tv.romanpeters.nl
       http:
