Move ingresses to internal/external TLS entrypoints

--- a/apps/media/immich-server.yaml
+++ b/apps/media/immich-server.yaml
@@ -93,7 +93,7 @@ kind: Ingress
 metadata:
   name: immich
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
 spec:
   ingressClassName: traefik
   rules:
