--- a/apps/monitoring/grafana-ingress.yaml
+++ b/apps/monitoring/grafana-ingress.yaml
@@ -15,7 +15,7 @@ metadata:
   name: grafana
   namespace: monitoring
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
 spec:
   ingressClassName: traefik
   rules:
@@ -36,7 +36,7 @@ metadata:
   name: grafana-redirect
   namespace: monitoring
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
     traefik.ingress.kubernetes.io/router.middlewares: monitoring-grafana-redirect@kubernetescrd
 spec:
   ingressClassName: traefik
