--- a/apps/apps/gitea-ingress.yaml
+++ b/apps/apps/gitea-ingress.yaml
@@ -14,7 +14,7 @@ kind: Ingress
 metadata:
   name: gitea
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
   labels:
     app.kubernetes.io/name: gitea
 spec:
@@ -36,7 +36,7 @@ kind: Ingress
 metadata:
   name: gitea-redirect
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
     traefik.ingress.kubernetes.io/router.middlewares: apps-gitea-redirect@kubernetescrd
   labels:
     app.kubernetes.io/name: gitea
