--- a/apps/apps/homebox-ingress.yaml
+++ b/apps/apps/homebox-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: homebox
   namespace: apps
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
 spec:
   ingressClassName: traefik
   rules:
