--- a/apps/apps/n8n-ingress.yaml
+++ b/apps/apps/n8n-ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: n8n
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
 spec:
   ingressClassName: traefik
   rules:
