--- a/apps/automation/awx.yaml
+++ b/apps/automation/awx.yaml
@@ -8,4 +8,4 @@ spec:
   ingress_class_name: traefik
   hostname: awx.romanpeters.nl
   ingress_annotations: |
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
