--- a/apps/infrastructure/helmrelease.yaml
+++ b/apps/infrastructure/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
         enabled: true
         ingressClassName: traefik
         annotations:
-          traefik.ingress.kubernetes.io/router.entrypoints: web
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
         hosts:
           - auth.romanpeters.nl
     postgresql:
