--- a/apps/infrastructure/homepage-tv-ingress.yaml
+++ b/apps/infrastructure/homepage-tv-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: homepage-tv
   namespace: infrastructure
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-extsecure-int,websecure-ext
 spec:
   ingressClassName: traefik
   tls:
