--- a/apps/media/bazarr-ingress.yaml
+++ b/apps/media/bazarr-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: bazarr
   namespace: media
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
 spec:
   ingressClassName: traefik
   rules:
