--- a/apps/media/calibre-web-ingress.yaml
+++ b/apps/media/calibre-web-ingress.yaml
@@ -15,7 +15,7 @@ metadata:
   name: calibre-web
   namespace: media
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
     traefik.ingress.kubernetes.io/router.middlewares: media-calibreweb-xscheme@kubernetescrd
 spec:
   ingressClassName: traefik
