--- a/apps/media/immich-redirect.yaml
+++ b/apps/media/immich-redirect.yaml
@@ -15,7 +15,7 @@ metadata:
   name: immich-redirect-ingress
   namespace: media
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
     traefik.ingress.kubernetes.io/router.middlewares: media-immich-redirect@kubernetescrd
 spec:
   ingressClassName: traefik
