--- a/apps/monitoring/changedetection-ingress.yaml
+++ b/apps/monitoring/changedetection-ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: changedetection
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
 spec:
   ingressClassName: traefik
   rules:
