--- a/apps/apps/heimdall-redirects.yaml
+++ b/apps/apps/heimdall-redirects.yaml
@@ -15,7 +15,7 @@ metadata:
   name: heimdall-root-alias
   namespace: apps
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
     traefik.ingress.kubernetes.io/router.middlewares: apps-heimdall-redirect-root@kubernetescrd
 spec:
   ingressClassName: traefik
