--- a/apps/infrastructure/homepage-ingress.yaml
+++ b/apps/infrastructure/homepage-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: homepage
   namespace: infrastructure
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
 spec:
   ingressClassName: traefik
   tls:
