--- a/apps/media/radarr-ingress.yaml
+++ b/apps/media/radarr-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: radarr
   namespace: media
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
 spec:
   ingressClassName: traefik
   rules:
