Allow ExternalName services and fix proxmox transport

--- a/apps/infrastructure/traefik-external-ingressroutes.yaml
+++ b/apps/infrastructure/traefik-external-ingressroutes.yaml
@@ -76,6 +76,6 @@ spec:
         - name: proxmox-external
           port: 8006
           scheme: https
-          serversTransport: infrastructure-proxmox-transport@kubernetescrd
+          serversTransport: proxmox-transport
   tls:
     secretName: romanpeters-nl-tls
