Add authentik forward-auth for homepage and set metallb LB class

--- a/apps/infrastructure/homepage-ingress.yaml
+++ b/apps/infrastructure/homepage-ingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: homepage
   namespace: infrastructure
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
+    traefik.ingress.kubernetes.io/router.middlewares: infrastructure-authentik-forward-auth@kubernetescrd
 spec:
   ingressClassName: traefik
   tls:
