--- a/apps/infrastructure/kustomization.yaml
+++ b/apps/infrastructure/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespace.yaml
   - helmrepo.yaml
   - authentik-secrets.sops.yaml
+  - authentik-forward-auth-middleware.yaml
   - helmrelease.yaml
   - garage-config.yaml
   - garage-secrets.sops.yaml
