Configure MetalLB LB class for Traefik services

--- a/apps/system/kustomization.yaml
+++ b/apps/system/kustomization.yaml
@@ -11,3 +11,5 @@ resources:
   - traefik-dashboard-ingressroute.yaml
   - traefik-internal-service.yaml
   - traefik-tlsstore.yaml
+patchesStrategicMerge:
+  - metallb-controller-lbclass-patch.yaml
