Set MetalLB lb-class on speaker

--- a/apps/system/kustomization.yaml
+++ b/apps/system/kustomization.yaml
@@ -13,3 +13,4 @@ resources:
   - traefik-tlsstore.yaml
 patchesStrategicMerge:
   - metallb-controller-lbclass-patch.yaml
+  - metallb-speaker-lbclass-patch.yaml
