--- a/apps/infrastructure/authentik-forward-auth-middleware.yaml
+++ b/apps/infrastructure/authentik-forward-auth-middleware.yaml
@@ -5,11 +5,18 @@ metadata:
   namespace: infrastructure
 spec:
   forwardAuth:
-    address: http://authentik-server.infrastructure.svc.cluster.local/outpost.goauthentik.io/auth/traefik
+    address: http://ak-outpost-traefik-outpost.infrastructure.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
     trustForwardHeader: true
     authResponseHeaders:
       - X-authentik-username
       - X-authentik-groups
+      - X-authentik-entitlements
       - X-authentik-email
       - X-authentik-name
       - X-authentik-uid
+      - X-authentik-jwt
+      - X-authentik-meta-jwks
+      - X-authentik-meta-outpost
+      - X-authentik-meta-provider
+      - X-authentik-meta-app
+      - X-authentik-meta-version
