Expose Authentik outpost path for homepage

--- a/apps/infrastructure/kustomization.yaml
+++ b/apps/infrastructure/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - homepage-deployment.yaml
   - homepage-service.yaml
   - homepage-ingress.yaml
+  - authentik-outpost-homepage-ingress.yaml
   - homepage-tv-config.yaml
   - homepage-tv-deployment.yaml
   - homepage-tv-service.yaml
