Revert IPv6 VIP changes (cluster IPv4-only)

--- a/apps/system/traefik-helmchartconfig.yaml
+++ b/apps/system/traefik-helmchartconfig.yaml
@@ -35,11 +35,6 @@ spec:
           tls:
             enabled: true
     service:
-      annotations:
-        metallb.io/loadBalancerIPs: "10.10.20.240,fd7b:c87:127b:14::240"
       spec:
         loadBalancerClass: metallb.universe.tf/metallb
-        ipFamilyPolicy: PreferDualStack
-        ipFamilies:
-          - IPv4
-          - IPv6
+        loadBalancerIP: 10.10.20.240
