Expose Gitea SSH via Traefik internal

--- a/apps/apps/kustomization.yaml
+++ b/apps/apps/kustomization.yaml
@@ -20,4 +20,5 @@ resources:
   - gitea-deployment.yaml
   - gitea-service.yaml
   - gitea-ingress.yaml
+  - gitea-ssh-ingressroute.yaml
   - gitea-secrets.sops.yaml
