--- a/apps/media/audiobookshelf-redirect.yaml
+++ b/apps/media/audiobookshelf-redirect.yaml
@@ -15,6 +15,7 @@ metadata:
   name: audiobookshelf-redirect-ingress
   namespace: media
   annotations:
+    external-dns: external
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
     traefik.ingress.kubernetes.io/router.middlewares: media-audiobookshelf-redirect@kubernetescrd
 spec:
