--- a/apps/infrastructure/homepage-tv-redirects.yaml
+++ b/apps/infrastructure/homepage-tv-redirects.yaml
@@ -26,6 +26,7 @@ metadata:
   name: homepage-tv-aliases
   namespace: infrastructure
   annotations:
+    external-dns: external
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
     traefik.ingress.kubernetes.io/router.middlewares: infrastructure-homepage-tv-redirect-rtv@kubernetescrd,infrastructure-homepage-tv-redirect-romantv@kubernetescrd
 spec:
