--- a/apps/system/external-dns-deployment.yaml
+++ b/apps/system/external-dns-deployment.yaml
@@ -32,6 +32,7 @@ spec:
             - --policy=sync
             - --cloudflare-proxied
             - --default-targets=82.174.113.104
+            - --force-default-targets
             - --interval=1m
             - --log-level=info
           env:
