Expose heimdall on external entrypoint

--- a/apps/apps/heimdall-ingress.yaml
+++ b/apps/apps/heimdall-ingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: heimdall
   namespace: apps
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
+    external-dns: external
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
 spec:
   ingressClassName: traefik
   rules:
