--- a/apps/apps/heimdall-redirects.yaml
+++ b/apps/apps/heimdall-redirects.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: apps
 spec:
   redirectRegex:
-    regex: ^https?://romanpeters\.nl/(.*)
-    replacement: https://hello.romanpeters.nl/$1
+    regex: ^https?://(www\.)?romanpeters\.nl/(.*)
+    replacement: https://hello.romanpeters.nl/$2
     permanent: true
 ---
 apiVersion: networking.k8s.io/v1
@@ -22,6 +22,16 @@ spec:
   ingressClassName: traefik
   rules:
     - host: romanpeters.nl
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: heimdall
+                port:
+                  name: http
+    - host: www.romanpeters.nl
       http:
         paths:
           - path: /
